--- a/WpfApp1/Icons/PauseButton.xaml
+++ b/WpfApp1/Icons/PauseButton.xaml
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<Viewbox xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-         Stretch="Uniform">
+<Viewbox xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Stretch="Uniform">
     <Canvas Width="24" Height="24">
-        <Path Stroke="Transparent"
-              StrokeThickness="0" Data="M13,16V8H15V16H13M9,16V8H11V16H9M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4Z"  />
+        <Path
+            Data="M13,16V8H15V16H13M9,16V8H11V16H9M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4Z"
+            Stroke="Transparent"
+            StrokeThickness="0" />
     </Canvas>
 </Viewbox>
