--- a/WpfApp1/Icons/PauseButtonSecond.xaml
+++ b/WpfApp1/Icons/PauseButtonSecond.xaml
@@ -2,7 +2,7 @@
 <Viewbox xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Stretch="Uniform">
     <Canvas Width="24" Height="24">
         <Path
-            Data="M17,3L22.25,7.5L17,12L22.25,16.5L17,21V18H14.26L11.44,15.18L13.56,13.06L15.5,15H17V12L17,9H15.5L6.5,18H2V15H5.26L14.26,6H17V3M2,6H6.5L9.32,8.82L7.2,10.94L5.26,9H2V6Z"
+            Data="M15,16H13V8H15M11,16H9V8H11M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
             Stroke="Transparent"
             StrokeThickness="0" />
     </Canvas>
