--- a/WpfApp1/Icons/PrevButton.xaml
+++ b/WpfApp1/Icons/PrevButton.xaml
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<Viewbox xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-         Stretch="Uniform">
+<Viewbox xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Stretch="Uniform">
     <Canvas Width="24" Height="24">
-        <Path Stroke="Transparent"
-              StrokeThickness="0" Data="M6,18V6H8V18H6M9.5,12L18,6V18L9.5,12Z" />
+        <Path
+            Data="M6,18V6H8V18H6M9.5,12L18,6V18L9.5,12Z"
+            Stroke="Transparent"
+            StrokeThickness="0" />
     </Canvas>
 </Viewbox>
