--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -5,12 +5,17 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:WpfApp1"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="MainWindow"
-    Width="1024"
-    Height="768"
+    xmlns:models="clr-namespace:WpfApp1.Models"
+    Title="EnotPlayer"
+    Width="1200"
+    Height="800"
+    MinWidth="800"
+    MinHeight="600"
+    Icon="Resources/raccoon.ico"
+    Style="{StaticResource CustomWindowStyle}"
     mc:Ignorable="d">
     <Window.Resources>
-        <local:PlayerViewModel x:Key="PlayerViewModel" />
+        <models:PlayerViewModel x:Key="PlayerViewModel" />
     </Window.Resources>
 
     <Grid>
